--- a/_extensions/refuge/_extension.yml
+++ b/_extensions/refuge/_extension.yml
@@ -1,13 +1,47 @@
 title: refuge
-author: McCrea Cobb
+author: Jane Biologist
 version: 0.0.1
 quarto-required: ">=1.3.0"
 contributes:
   formats:
     revealjs:
       theme: [default, refuge_light.scss]
+      subtitle: "A subtitle"
+      height: 900
+      width: 1600
+      transition: fade
+      incremental: false
+      highlight-style: github
+      code-overflow: wrap
       menu:
         side: left
-      slide-number: true
+      slide-number: c
       date-format: long
+      include-after-body:
+        - text: |
+            <script type="text/javascript">
+              window.addEventListener('load', function() {
+                var logo = document.querySelector('.slide-logo');
+                var url = 'https://stat20.org';
+                logo.addEventListener('click', function() {
+                  window.open(url, '_blank');
+                });
+              });
+              Reveal.on('ready', event => {
+                if (event.indexh === 0) {
+                  document.querySelector("div.has-logo > img.slide-logo").style.display = "none";
+                }
+              });
+              Reveal.addEventListener('slidechanged', (event) => {
+                if (event.indexh === 0) {
+                  Reveal.configure({ slideNumber: null });
+                  document.querySelector("div.has-logo > img.slide-logo").style.display = "none";
+                }
+                if (event.indexh === 1) { 
+                  Reveal.configure({ slideNumber: 'c' });
+                  document.querySelector("div.has-logo > img.slide-logo").style.display = null;
+                }
+              });
+            </script>
+            
 
